--- a/base/templates/base/delete_item.html
+++ b/base/templates/base/delete_item.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-
+    {% include 'navbar.html' %}
     <form method="POST" action="" class="edit_card">
         {% csrf_token %}
         
@@ -30,7 +30,7 @@
         {% if page == 'delete-card' %}
         <h3>Are you sure you want to delete the card with the title {{task.name}}?</h3>
         {% endif %}
-        <div class="main_button"  id="edit_card_delete">Cancel</div>
+        <div class="main_button"  id="edit_card_delete" onclick="location.pathname = 'board/{{board.id}}'">Cancel</div>
         <button class="main_button" type="submit" id="edit_card_cancel">Yes</button>
     </form>
 
