--- a/base/templates/base/card_form.html
+++ b/base/templates/base/card_form.html
@@ -13,44 +13,21 @@
     <link rel="stylesheet" href="{% static 'styles/app.css' %}">
     <title>{{board.name}}</title>
 </head>
-<!-- <header>
-    <div class="navbar">
-        <div class="flex_help_container">
-           
-            <h1 class="home"><a href="{% url 'home' %}">Webprojekt</a></h1>
-        </div>
-        <ul class="nav_elements">
-            <li class="nav_element board_title">{{board.name}}</li>
-        </ul>
-        <div class="flex_help_container">
-            <div class="nav_element acc_expand">Account</div>
-            <div class="popover_account">
-                <div class="popover_account_container">
-                    <div class="popover_account_button">email@email.com</div>
-                    <div class="popover_account_buttons">
-                        <div class="popover_account_button">my boards</div>
-                        <div class="popover_account_button" onclick="location.pathname = './Pages/profile.html'">
-                            profile</div>
-                    </div>
-                    <div class="popover_account_button">Log out</div>
-                </div>
-            </div>
-        </div>
-    </div>
-</header> -->
-<h1>Create Task for Board {{ board.name }}</h1>
-<form method="POST" action="" class="edit_card">
-    {% csrf_token %}
+<body>
+    {% include 'navbar.html' %}
+    <h1>Create Task for Board {{ board.name }}</h1>
+    <form method="POST" action="" class="edit_card">
+        {% csrf_token %}
 
-    {{form.as_p}}
+        {{form.as_p}}
 
-    <input type="hidden" name="board_id" value="{{ board.id }}">
-    <input type="hidden" name="owner" value="{{ creator.email }}">
-    {% if page == 'update-card' %}
-    <div class="main_button"  id="edit_card_delete" onclick="location.pathname = 'delete_card/{{task.id}}'">delete</div>
-    {% endif %}
-    <div class="main_button" id="edit_card_cancel" onclick="location.pathname = 'board/{{board.id}}'">cancel</div>
-    <button class="main_button" type="submit" type="submit" id="edit_card_save">submit</button>
-</form>
-
+        <input type="hidden" name="board_id" value="{{ board.id }}">
+        <input type="hidden" name="owner" value="{{ creator.email }}">
+        {% if page == 'update-card' %}
+        <div class="main_button"  id="edit_card_delete" onclick="location.pathname = 'delete_card/{{task.id}}'">delete</div>
+        {% endif %}
+        <div class="main_button" id="edit_card_cancel" onclick="location.pathname = 'board/{{board.id}}'">cancel</div>
+        <button class="main_button" type="submit" type="submit" id="edit_card_save">submit</button>
+    </form>
+</body>
 {% endblock content %}
