--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -18,25 +18,11 @@
     <title>Log in</title>
 </head>
 
+{% include 'navbar.html' %}
 <body>
+    
     {% if page == 'login' %}
-    <header>
-        <div class="navbar">
-            <div class="flex_help_container">
-                <!-- currently set to logged in page, change on not logged in -->
-                <h1 class="home" onclick="location.pathname = '.'">Webprojekt</h1>
-            </div>
-            <ul class="nav_elements">
-                <li class="nav_element">Log in</li>
-            </ul>
-            <div class=" flex_help_container">
-                <div class="sign_options">
-                    <div class="log_in_btn" onclick="location.pathname = './login'">Log in</div>
-                    <div class="sign_up_btn" onclick="location.pathname = './register'">Sign up</div>
-                </div>
-            </div>
-        </div>
-    </header>
+    
     <div class="content">
         <div class="back_color_sign_in">
             <div class="sign_in_container">
@@ -73,23 +59,7 @@
     <!-- register -->
     {% else %}
     <div class="backdrop"></div>
-    <header>
-        <div class="navbar">
-            <div class="flex_help_container">
-                <!-- currently set to logged in page, change on not logged in -->
-                <h1 class="home" onclick="location.pathname = '.'">Webprojekt</h1>
-            </div>
-            <ul class="nav_elements">
-                <li class="nav_element">Sign up</li>
-            </ul>
-            <div class="flex_help_container">
-                <div class="sign_options">
-                    <div class="log_in_btn" onclick="location.pathname = './login'">Log in</div>
-                    <div class="sign_up_btn" onclick="location.pathname = './register'">Sign up</div>
-                </div>
-            </div>
-        </div>
-    </header>
+    
     <div class="content">
         <div class="profile_settings_container">
             <form action="/register/" method="POST" class="profile_settings">
