--- a/base/templates/base/board_form.html
+++ b/base/templates/base/board_form.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% block content %}
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,22 +14,25 @@
     <link rel="stylesheet" href="{% static 'styles/app.css' %}">
     <title>{{board.name}}</title>
 </head>
+
 <body>
     {% include 'navbar.html' %}
     <form method="POST" action="" class="edit_board">
         {% csrf_token %}
 
-        {{form.as_p}}
-        
+        {{form}}
+
         <div id="border_settings"></div>
         <div class="edit_board_button_selection">
             <div class="main_button" style="visibility: hidden"></div>
-            
-            <div class="main_button" id="edit_board_delete" onclick="location.pathname = 'delete_board/{{board.id}}'">delete</div>
-            
+
+            <div class="main_button" id="edit_board_delete" onclick="location.pathname = 'delete_board/{{board.id}}'">
+                delete</div>
+
         </div>
         <div class="edit_board_button_selection">
-            <div class="main_button" id="edit_board_cancel" onclick="location.pathname = 'board/{{board.id}}'">cancel</div>
+            <div class="main_button" id="edit_board_cancel" onclick="location.pathname = 'board/{{board.id}}'">cancel
+            </div>
             <button class="main_button" type="submit" id="edit_board_save">submit</button>
         </div>
     </form>
