query functionality while moving pages

--- a/base/templates/base/board.html
+++ b/base/templates/base/board.html
@@ -93,7 +93,7 @@
             </div>
             <div class="sidebar right_sidebar">
                 <form class="search_container" id="board_search_titles_container">
-                    <input type="text" name="q" class="searchbar" id="board_search_titles" placeholder="Search Cards" />
+                    <input type="text" name="q2" class="searchbar" id="board_search_titles" placeholder="Search Cards" />
                     <button class="search_btn" type="submit">
                         <img src="{% static 'Images/Icons/suche.svg' %}" alt="search">
                     </button>
