--- a/base/templates/base/card_form.html
+++ b/base/templates/base/card_form.html
@@ -25,8 +25,8 @@
 
                 {{form.as_p}}
 
-                <input type="hidden" name="board_id" value="{{ board.id }}">
-                <input type="hidden" name="owner" value="{{ creator.email }}">
+                <!-- <input type="hidden" name="board_id" value="{{ board.id }}">
+                <input type="hidden" name="owner" value="{{ creator.email }}"> -->
                 {% if page == 'update-card' %}
                 <div class="main_button" id="edit_card_delete" onclick="location.pathname = 'delete_card/{{task.id}}'">
                     delete</div>
