--- a/base/templates/base/delete_item.html
+++ b/base/templates/base/delete_item.html
@@ -39,7 +39,7 @@
 
                 {% if page == 'delete-card' %}
                 <h3>Are you sure you want to delete the card with the title:</h3>
-                <h3>"{{task.name}}"</h3>
+                <h3>"{{card.name}}"</h3>
                 <h3>?</h3>
                 {% endif %}
                 <div class="main_button" id="edit_card_delete" onclick="location.pathname = 'board/{{board.id}}'">Cancel
