--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -28,7 +28,7 @@
                 <h1>My Boards</h1>
                 <form class="search_container">
                     <input type="text" name="q" class="searchbar" placeholder="Search for Boards" />
-                    <button type="sutbmit" class="search_btn">
+                    <button type="submit" class="search_btn">
                         <img src="{% static 'Images/Icons/suche.svg' %}" alt="search">
                     </button>
                 </form>
@@ -51,7 +51,7 @@
             <h1>Log in to add your own boards!</h1>
             <form class="search_container">
                 <input type="text" name="q" class="searchbar" placeholder="Search for Boards" />
-                <button type="sutbmit" class="search_btn">
+                <button type="submit" class="search_btn">
                     <img src="{% static 'Images/Icons/suche.svg' %}" alt="search">
                 </button>
             </form>
